Interpreter: LinkedList instead of ArrayList for performance.